# Github-Madlibs-Project

./: .gitignore  README.md  pyproject.toml
github_madlibs_project/: codehs_version_madlibs.py  madlibs.txt  madlibs_widget.py  sample.py
tests/: test_github_madlibs_project.py
