[tool.poetry]
name = "Github-Madlibs-Project"
version = "0.1.0"
description = ""
authors = ["Your Name tabek007@hsd.k12.or.us"]

[tool.poetry.dependencies]
python = "^3.9"
dearpygui = "^1.8.0"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
