[tool.poetry]
name = "Github-Madlibs-Project"
version = "0.1.0"
description = ""
authors = ["Kolton Taber tabek007@hsd.k12.or.us"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
PyQt6 = "^6.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
